# HydraAI-Inspect

./: .gitignore  LICENSE  QUICK-REFERENCE.md  README.md  mock-ai-service.js  package.json  pnpm-workspace.yaml  start-all.sh  stop-all.sh
.github/workflows/: ci-ai-service.yml  ci-backend.yml  (+2 more)
ai-service/: .env.example  Dockerfile  README.md  pyproject.toml
ai-service/src/: main.py
ai-service/src/app/: main.py
ai-service/src/app/core/: config.py  logging.py
ai-service/src/app/routers/: analyze.py  health.py
ai-service/src/app/services/: scoring.py  yolo_inference.py  yolo_loader.py
ai-service/src/models/: README.md
ai-service/src/schemas/: inference.py
ai-service/src/services/: inference.py
ai-service/tests/: test_inference.py
backend/: .env.example  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  QUICK-DEPLOY.md  README.md  ecosystem.config.cjs  package-lock.json  package.json  tsconfig.json
docs/: ai-model.md  architecture.md  cardano-setup.md  catalyst-proposal.md  environment-variables.md  hydra-setup.md  overview.md  running-without-docker.md
frontend/: package-lock.json  package.json
frontend-app/: .env.example  App.tsx  README.md  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
hydra/: README.md
infra/: README.md  docker-compose.dev.yml  docker-compose.prod.yml
landing-page/: App.tsx  README.md  constants.ts  index.css  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: check-services.sh  setup-env.sh
(+88 files in other folders)
